--- a/Client/application/halamanutama.html
+++ b/Client/application/halamanutama.html
@@ -12,10 +12,11 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
+
         <!-- Membuat navbar-->
         <nav class="navbar navbar-expand-lg navbar-white bg-white">
             <div class="container">
-                <a class="navbar-brand" href="#!">KaBat</a>
+                <h1>KaBat</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -23,6 +24,7 @@
                 </div>
             </div>
         </nav>
+
         <!-- Membuat Header-->
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
@@ -32,6 +34,7 @@
                 </div>
             </div>
         </header>
+
         <!-- Content section-->
         <section class="py-5">
             <div class="container my-5">
@@ -45,6 +48,7 @@
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
                         <div class="card h-100">
+
                             <!-- Product image-->
                             <img class="card-img-top" src="assets/mobil2.jpeg"/>
                             <!-- Product details-->
@@ -123,11 +127,46 @@
                         </div>
                     </div>
         </section>
-        <!-- Image element - set the background image for the header in the line below-->
-        <div class="py-5 bg-dark bg-image-full">
-            <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
-            <div style="height: 20rem"></div>
-        </div>
+
+        <section class="bg-dark py-5">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="row gx-4 gx-lg-5">
+                    <div class="col-md-4 mb-3 mb-md-0">
+                        <div class="card py-4 h-100">
+                            <div class="card-body text-center">
+                               <!-- <i class="fas fa-map-marked-alt text-primary mb-2"></i> -->
+                                <h4>Kontak</h4>
+                                <hr class="my-4 mx-auto"/>
+                                <div>0895-6304-88200 </br> 
+                                0898-1798-046
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                        <i class="fas fa-envelope text-primary mb-2"></i>
+                            <h4>Alamat</h4>
+                                <hr class="my-4 mx-auto" />
+                                <div>Jl. Nawawi Gelar Dalom No.77, Rajabasa Jaya, Rajabasa, Bandar Lampung, Lampung</div>
+                            </div>
+                        </div>
+                    </div>
+
+            <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                        <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                            <h4>Jam Buka</h4>
+                            <hr class="my-4 mx-auto" />
+                            <div>Senin - Minggu <br> Buka 24 Jam</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Membuat footer-->
         <footer class="py-5 bg-white">
             <div class="container"><p class="m-0 text-center text-dark"> Copyright &copy; KaBat-2022</p></div>
