--- a/Client/application/halamanutama.html
+++ b/Client/application/halamanutama.html
@@ -149,7 +149,7 @@
                         <i class="fas fa-envelope text-primary mb-2"></i>
                             <h4>Alamat</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div>Jl. Nawawi Gelar Dalom No.77, Rajabasa Jaya, Rajabasa, Bandar Lampung, Lampung</div>
+                                <div>Jl. Nawawi Gelar Dalom No.77, Sumberejo, Rajabasa Jaya, Rajabasa, Bandar Lampung, Lampung</div>
                             </div>
                         </div>
                     </div>
