--- a/Client/application/halamanutama.html
+++ b/Client/application/halamanutama.html
@@ -13,15 +13,21 @@
     </head>
     <body>
 
-        <!-- Membuat navbar-->
-        <nav class="navbar navbar-expand-lg navbar-white bg-white">
-            <div class="container">
-                <h1>KaBat</h1>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0"></ul>
-                </div>
-            </div>
+        <!-- Membuat Navbar pada header-->
+        <nav class="drop" id="home">
+            <label>KaBat</label>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#">Product</a>
+                    <ul class="dropdown">
+                        <li><a href="#laris">Paling Laris</a></li>
+                        <li><a href="#">Image</a></li>
+                        <li><a href="#">Document</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
         </nav>
 
         <!-- Membuat Header-->
@@ -29,13 +35,15 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">Rental Mobil Bandar Lampung</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Kami menyediakan rental mobil Bandar Lampung yang tentunya murah dan lebih mudah jika memesannya secara online di KaBat. Kami menyediakan sewa mobil lepas kunci maupun dengan sopir. Tersedia rental mobil dengan durasi harian, dan mingguan.</p>
+                    <p class="lead fw-normal text-white-50 mb-0">Kami menyediakan rental mobil Bandar Lampung yang tentunya murah dan 
+                        lebih mudah jika memesannya secara online di KaBat. Kami menyediakan sewa mobil lepas kunci maupun dengan sopir. 
+                        Tersedia rental mobil dengan durasi harian, dan mingguan.</p>
                 </div>
             </div>
         </header>
 
         <!-- Membuat section-->
-        <section class="py-5">
+        <section class="py-5" id="laris">
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="text-center">
@@ -60,7 +68,8 @@
                             </div>
                             <!-- Membuat tombol pesan-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Pesan Sekarang</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://wa.me/62895630488200?text=Hallo admin, 
+                                    saya ingin merental mobil">Pesan Sekarang</a></div>
                             </div>
                         </div>
                     </div>
@@ -80,7 +89,8 @@
                             </div>
                             <!-- Membuat tombol pesan-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Pesan Sekarang</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://wa.me/62895630488200?text=Hallo admin, 
+                                    saya ingin merental mobil">Pesan Sekarang</a></div>
                             </div>                        
                         </div>
                     </div>
@@ -100,7 +110,8 @@
                         </div>
                         <!-- Membuat tombol pesan-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Pesan Sekarang</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://wa.me/62895630488200?text=Hallo admin, 
+                                saya ingin merental mobil">Pesan Sekarang</a></div>
                         </div>
                     </div>
                 </div>
@@ -120,7 +131,8 @@
                         </div>
                         <!-- Membuat tombol pesan-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Pesan Sekarang</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://wa.me/62895630488200?text=Hallo admin, 
+                                saya ingin merental mobil">Pesan Sekarang</a></div>
                         </div>
                     </div>
                 </div>
@@ -140,7 +152,8 @@
                 </div>
                 <!-- Membuat tombol pesan-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Pesan Sekarang</a></div>
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://wa.me/62895630488200?text=Hallo admin, 
+                        saya ingin merental mobil">Pesan Sekarang</a></div>
                 </div>
             </div>
         </div>
@@ -160,7 +173,8 @@
                 </div>
                 <!-- Membuat tombol pesan-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Pesan Sekarang</a></div>
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://wa.me/62895630488200?text=Hallo admin, 
+                        saya ingin merental mobil">Pesan Sekarang</a></div>
                 </div>
             </div>
         </div>
@@ -175,12 +189,15 @@
                         <!-- Nama product-->
                         <h5 class="fw-bolder">Sigra</h5>
                         <!-- Harga product-->
-                        Rp. 340.000/Hari
-                    </div>    
+                        Rp. 340.000/Hari 
+                    </div>
+                <div class="text-sm-end">
+                    <a href="views/Detail.html">Detail</a> </div>
                 </div>
                 <!-- Membuat tombol pesan-->
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Pesan Sekarang</a></div>
+                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">   
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://wa.me/62895630488200?text=Hallo admin, 
+                        saya ingin merental mobil">Pesan Sekarang</a></div>
                 </div>
             </div>
         </div>
@@ -200,15 +217,15 @@
                 </div>
                 <!-- Membuat tombol pesan-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Pesan Sekarang</a></div>
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://wa.me/62895630488200?text=Hallo admin, 
+                        saya ingin merental mobil">Pesan Sekarang</a></div>
                 </div>
             </div>
         </div>
-
-        </section>
+    </section>
 
         <!-- Membuat section untuk menampilkan informasi-->
-        <section class="bg-dark py-5">
+        <section class="bg-dark py-5" id="kontak">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-4 mb-3 mb-md-0">
@@ -233,6 +250,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                         <div class="col-md-4 mb-3 mb-md-0">
                             <div class="card py-4 h-100">
                                 <div class="card-body text-center">
