--- a/Client/application/halamanutama.html
+++ b/Client/application/halamanutama.html
@@ -25,7 +25,7 @@
                         <li><a href="#">Document</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#kontak">Contact Us</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
         </nav>
