menambahkan beberapa informasi

--- a/Client/application/halamanutama.html
+++ b/Client/application/halamanutama.html
@@ -21,12 +21,12 @@
                 <li><a href="#">Product</a>
                     <ul class="dropdown">
                         <li><a href="#laris">Paling Laris</a></li>
-                        <li><a href="#">Image</a></li>
-                        <li><a href="#">Document</a></li>
+                        <li><a href="Detail.html">All Product</a></li>
+                        <li><a href="Syarat.html">Syarat dan Ketentuan</a></li>
                     </ul>
                 </li>
                 <li><a href="#kontak">Contact Us</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
 
@@ -47,7 +47,7 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="text-center">
-                        <h2>Harga Sewa Mobil</h2>
+                        <h2>Paling Laris</h2>
                     </div>
                 </div>
             </div>
@@ -191,8 +191,6 @@
                         <!-- Harga product-->
                         Rp. 340.000/Hari 
                     </div>
-                <div class="text-sm-end">
-                    <a href="views/Detail.html">Detail</a> </div>
                 </div>
                 <!-- Membuat tombol pesan-->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">   
